
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ time_t ;
typedef int datestring ;


 int localtime (scalar_t__*) ;
 int printf (char*,char*) ;
 int strftime (char*,int,char*,int ) ;
 scalar_t__ time (int *) ;

char *getdate4(int b){
 static char datestring[40];
 time_t ttt;
        int minustime;
 minustime=86400 * b;
 ttt=time(((void*)0))- minustime;
 strftime (datestring, sizeof(datestring), "%m.%d.%Y", localtime(&ttt));
 printf("Searching: forumbackup-%s.sql\n", datestring);
 return(datestring);
}
