; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_1189.c_getdate4.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_1189.c_getdate4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@getdate4.datestring = internal global [40 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [9 x i8] c"%m.%d.%Y\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"Searching: forumbackup-%s.sql\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getdate4(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = mul nsw i32 86400, %5
  store i32 %6, i32* %4, align 4
  %7 = call i64 @time(i32* null)
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = sub nsw i64 %7, %9
  store i64 %10, i64* %3, align 8
  %11 = call i32 @localtime(i64* %3)
  %12 = call i32 @strftime(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @getdate4.datestring, i64 0, i64 0), i32 40, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([40 x i8], [40 x i8]* @getdate4.datestring, i64 0, i64 0))
  ret i8* getelementptr inbounds ([40 x i8], [40 x i8]* @getdate4.datestring, i64 0, i64 0)
}

declare dso_local i64 @time(i32*) #1

declare dso_local i32 @strftime(i8*, i32, i8*, i32) #1

declare dso_local i32 @localtime(i64*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
